--- a/project/index.html
+++ b/project/index.html
@@ -1,32 +1,34 @@
 <html style="width: 828px; height: 1792px;">
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Project</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='main.js'></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js?cdv=40" type="text/javascript"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css?cdv=40" type="text/css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 </head>
 <header>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-4">
-
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                          <span class="navbar-toggler-icon"></span>
-                        </button>
-                    </div>
-                </div>
+            <div class="col-4">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                      <li><a class="dropdown-item" href="#">Log in</a></li>
+                      <li><a class="dropdown-item" href="#">Add Item</a></li>
+                      <li><a class="dropdown-item" href="#">Setting</a></li>
+                    </ul>
+                  </div>
             </div>
-            <div class="col-8" style="padding: 12px;">
-                <input class="form-control" type="search" placeholder="Search" aria-label="Search" style="width: 100%; height: 200%;">
+            <div class="col-8">
+                <input class="form-control" type="search" placeholder="Search" aria-label="Search" style="width:375%;">
             </div>
-        </div>
+            </div>
         </div>
     </nav>
 </header>
@@ -54,7 +56,7 @@
                     </label>
                 </div>
             </div>
-            <div class="col-6" style="padding: 20px 10px;">
+            <div class="col-8" style="padding: 20px 10px;">
                 <p style="font-size: 80px;">Item</p>
                 <p style="font-size: 20px;">Due: 01/01/2021 15:00</p>
             </div>
@@ -137,14 +139,15 @@
     </div>
     <div class="container-fluid" style=" background-color: #D4F1F4; height: 100px; border-style: solid;">
         <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
-            <span class="caret"></span></button>
-            <ul class="dropdown-menu">
-                <li><a href="#">HTML</a></li>
-                <li><a href="#">CSS</a></li>
-                <li><a href="#">JavaScript</a></li>
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+              +
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" href="#">Add Item</a></li>
+              <li><a class="dropdown-item" href="#">Reset</a></li>
+              <li><a class="dropdown-item" href="#">Quit</a></li>
             </ul>
-        </div>
+          </div>
     </div>
 </body>
 
