--- a/RR-Web/index.html
+++ b/RR-Web/index.html
@@ -13,15 +13,15 @@
   <header>
     <nav class="navbar navbar-white bg-white">
         <div class="container-fluid" style="height: 64px; align-items: center;">
-          <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\ic-logo.svg">
-          <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\ic-on-campus.svg">
-          <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\ic-online.svg">
-          <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\ic-login.svg">
+          <img src="capstone_colmar_assets/images/ic-logo.svg">
+          <img src="capstone_colmar_assets/images/ic-on-campus.svg">
+          <img src="capstone_colmar_assets/images/ic-online.svg">
+          <img src="capstone_colmar_assets/images/ic-login.svg">
         </div>
       </nav>
   </header>
   <body>
-    <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\banner.jpg" style="width: 500px; height: 300px;">
+    <img src="capstone_colmar_assets/images/banner.jpg" style="width: 500px; height: 300px;">
     <div class="container-fluid" style= "background-color: rgba(207, 206, 204, 0.87);">
       <p class="fs-4 fw-bold" style="padding: 32px 16px;">Learn something<br> new everyday</p>
       <p class="fs-6"style="padding: 0px 16px; padding-bottom: 24px;">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit</p>
@@ -30,7 +30,7 @@
     <div class="card" style="width: 500px; height: 400px;">
       <div class="col">
           <div class="row-4" style="width: 35%;">
-              <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\information-orientation.jpg" 
+              <img src="capstone_colmar_assets/images/information-orientation.jpg" 
               class="card-img-top" style="width: 468px; height: 200px; padding: 16px;">
           </div>
           <div class="row-8" style="width: 65%;">
@@ -45,7 +45,7 @@
   <div class="card" style="width: 500px; height: 400px;">
       <div class="col">
           <div class="row-4" style="width: 35%;">
-              <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\information-campus.jpg"  
+              <img src="capstone_colmar_assets/images/information-campus.jpg"  
               class="card-img-top" style="width: 468px; height: 200px; padding: 16px;">
           </div>
       <div class="row-8" style="width: 65%;">
@@ -60,7 +60,7 @@
   <div class="card" style="width: 500px; height: 400px;">
       <div class="col">
           <div class="row-4" style="width: 35%;">
-          <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\information-guest-lecture.jpg" 
+          <img src="capstone_colmar_assets/images/information-guest-lecture.jpg" 
           class="card-img-top" style="width: 468px; height: 200px; padding: 16px;">
         </div>
         <div class="row-8" style="width: 65%;">
@@ -96,7 +96,7 @@
   <div class="container-fluid">
     <p class="fs-4 fw-bold" style="text-align:center; padding: 32px;" >Thesis exhibits</p>
       <video width="500px" height="300px"controls>
-        <source src=C:/Users/luilu/Desktop/RR-WEB/capstone_colmar_assets/videos/thesis.mp4 type="video/mp4">
+        <source src=capstone_colmar_assets/videos/thesis.mp4 type="video/mp4">
       </video>
   </div>
   <footer>
@@ -110,7 +110,7 @@
         <div class="container-fluid" style="height: 64px; align-items: center;">
             <div style="margin: 24px;">
             <span class="navbar-brand mb-0 h1 fw-bold" style="height: 32px;">
-                <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\ic-logo.svg" style = "height: 32px;">COLMAR
+                <img src="capstone_colmar_assets/images/ic-logo.svg" style = "height: 32px;">COLMAR
                 <span class="navbar-brand mb-0 h1 fw-bold" style= "color: rgba(207, 206, 204, 0.87); height: 32px;">ACADEMY</span></span>
             </div>
             <ul>
@@ -126,7 +126,7 @@
     <div class="container-fluid" style= "background-color: rgba(207, 206, 204, 0.87);">
         <div class="row" style="align-items: center;">
           <div class="col-7">
-            <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\banner.jpg" style="width: 100%; padding: 32px 24px;">
+            <img src="capstone_colmar_assets/images/banner.jpg" style="width: 100%; padding: 32px 24px;">
             </div>
              <div class="col-5">
                 　  <p class="fs-4 fw-bold">Learn something<br> new everyday</p>
@@ -138,7 +138,7 @@
     <div class="container-fluid">
         <div class="row">
           <div class="col-7">
-            <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\information-main.jpg" style="width: 100%; padding: 32px 24px;">
+            <img src="capstone_colmar_assets/images/information-main.jpg" style="width: 100%; padding: 32px 24px;">
             <p class="fs-4 fw-bold" style="line-height: 24px">It dosen't hurt to keep practicing</p>
             <p class="fs-6">"Curabitur vitae libero in ipsum porttitor consequat.Aliquam et commodo lectus,
                              nec consequat neque.Sed non accumsan urna.Phasellus sed consequat ex.Etiam 
@@ -149,7 +149,7 @@
             <div class="card" style="width: 30rem; height: 10rem;">
                 <div class="row">
                     <div class="col-4" style="width: 35%;">
-                        <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\information-orientation.jpg" 
+                        <img src="capstone_colmar_assets/images/information-orientation.jpg" 
                         class="card-img-top" style="height: auto; padding:16px;">
                     </div>
                     <div class="col-8" style="width: 65%;">
@@ -164,7 +164,7 @@
             <div class="card" style="width: 30rem; height: 10rem;">
                 <div class="row">
                     <div class="col-4" style="width: 35%;">
-                        <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\information-campus.jpg"  
+                        <img src="capstone_colmar_assets/images/information-campus.jpg"  
                         class="card-img-top" style="height: auto; padding:16px;">
                     </div>
                 <div class="col-8" style="width: 65%;">
@@ -179,7 +179,7 @@
             <div class="card" style="width: 30rem; height: 10rem;">
                 <div class="row">
                     <div class="col-4" style="width: 35%;">
-                    <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\information-guest-lecture.jpg" 
+                    <img src="capstone_colmar_assets/images/information-guest-lecture.jpg" 
                     class="card-img-top" style="height: auto; padding:16px;">
                   </div>
                   <div class="col-8" style="width: 65%;">
@@ -197,7 +197,7 @@
         <p class="fs-4 fw-bold" style="text-align:center; padding-top:32px; padding-bottom:0;" >Start Learning</p>
         <div class="card-group" style="padding: 0px 72px;">
           <div class="card" style="padding: 32px; background-color: rgba(207, 206, 204);">
-            <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\course-software.jpg" class="card-img-top" >
+            <img src="capstone_colmar_assets/images/course-software.jpg" class="card-img-top" >
             <div class="card-body">
               <h5 class="card-title fw-bold">Software engineering</h5>
               <p class="card-text" style="padding: 8px 0px;">COURSES</p>
@@ -205,7 +205,7 @@
             </div>
           </div>
           <div class="card" style="padding: 32px; background-color: rgba(207, 206, 204);">
-            <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\course-computer-art.jpg" class="card-img-top">
+            <img src="capstone_colmar_assets/images/course-computer-art.jpg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title fw-bold">Computer art</h5>
               <p class="card-text" style="padding: 8px 0px;">COURSES</p>
@@ -213,7 +213,7 @@
             </div>
           </div>
           <div class="card" style="padding: 32px; background-color: rgba(207, 206, 204);">
-            <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\course-design.jpg" class="card-img-top">
+            <img src="capstone_colmar_assets/images/course-design.jpg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title fw-bold">Design</h5>
               <p class="card-text" style="padding: 8px 0px;">COURSES</p>
@@ -223,7 +223,7 @@
         </div>
         <div class="card-group" style="padding: 32px 72px;">
           <div class="card" style="padding: 32px; background-color: rgba(207, 206, 204);">
-            <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\course-data.jpg" class="card-img-top">
+            <img src="capstone_colmar_assets/images/course-data.jpg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title fw-bold">Data</h5>
               <p class="card-text" style="padding: 8px 0px;">COURSES</p>
@@ -231,7 +231,7 @@
             </div>
           </div>
           <div class="card" style="padding: 32px; background-color: rgba(207, 206, 204);">
-            <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\course-business.jpg" class="card-img-top">
+            <img src="capstone_colmar_assets/images/course-business.jpg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title fw-bold">Business</h5>
               <p class="card-text" style="padding: 8px 0px;">COURSES</p>
@@ -239,7 +239,7 @@
             </div>
           </div>
           <div class="card" style="padding: 32px; background-color: rgba(207, 206, 204);">
-            <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\course-marketing.jpg" class="card-img-top">
+            <img src="capstone_colmar_assets/images/course-marketing.jpg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title fw-bold">Marketing</h5>
               <p class="card-text" style="padding: 8px 0px;">COURSES</p>
@@ -253,7 +253,7 @@
         <div class="row">
             <div class="col-7">
                 <video width="100%" height="400px"controls style="padding: 24px 24px;">
-                    <source src=C:/Users/luilu/Desktop/RR-WEB/capstone_colmar_assets/videos/thesis.mp4 type="video/mp4">
+                    <source src=capstone_colmar_assets/videos/thesis.mp4 type="video/mp4">
                   </video>
                 <p class="fs-4 fw-bold" style="padding-top: 8px;">Reimagine urban</p>
                 <p class="fs-6" style="padding-bottom: 32px;">"Curabitur vitae libero in ipsum porttitor consequat.Aliquam et commodo lectus,
@@ -264,7 +264,7 @@
               <div class="card" style="width: 30rem; height: 10rem;">
                   <div class="row">
                       <div class="col-4" style="width: 35%;">
-                          <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\thesis-fisma.jpg" class="card-img-top" style="padding: 16px;">
+                          <img src="capstone_colmar_assets/images/thesis-fisma.jpg" class="card-img-top" style="padding: 16px;">
                       </div>
                       <div class="col-8" style="width: 65%;">
                       <div class="card-body">
@@ -277,7 +277,7 @@
               <div class="card" style="width: 30rem; height: 10rem;">
                   <div class="row">
                       <div class="col-4" style="width: 35%;">
-                          <img src="C:\Users\luilu\Desktop\RR-WEB\capstone_colmar_assets\images\thesis-now-and-then.jpg"  class="card-img-top" style="padding: 16px;">
+                          <img src="capstone_colmar_assets/images/thesis-now-and-then.jpg"  class="card-img-top" style="padding: 16px;">
                       </div>
                   <div class="col-8" style="width: 65%;">
                   <div class="card-body">
