--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,7 +15,7 @@
         <!-- Side-Nav -->
         <div class="side-navbar active-nav d-flex justify-content-between flex-wrap flex-column" id="sidebar">
             <ul class="nav flex-column text-white w-100">
-                <a href="#" class="nav-link h3 text-white my-2">Note</a>
+                <a href="#" class="nav-link h3 text-white my-2">To do list</a>
                 <li href="#" class="nav-link">
                     <i class="bx bx-user-check"></i>
                     <span class="mx-2">Guest</span>
@@ -23,6 +23,14 @@
                 <li href="#" class="nav-link">
                     <i class="bx bx-add-to-queue"></i>
                     <span class="mx-2" data-bs-toggle="modal" data-bs-target="#AddItemModal">Add Item</span>
+                </li>
+                <li href="#" class="nav-link">
+                    <i class='bx bxs-edit'></i>
+                    <span class="mx-2" data-bs-toggle="modal" data-bs-target="#AddItemModal2">Edit Item</span>
+                </li>
+                <li href="#" class="nav-link">
+                    <i class='bx bx-unlink'></i>
+                    <span class="mx-2" data-bs-toggle="modal" data-bs-target="#AddItemModal3">Delete Item</span>
                 </li>
                 <li href="#" class="nav-link">
                     <i class="bx bx-log-in"></i>
@@ -58,8 +66,7 @@
                             </li>
                         </ul>
                         <form class="d-flex">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
+                            <input class="form-control me-2" type="text" placeholder="search for item" id="searchBar1">
                         </form>
                     </div>
                 </div>
@@ -68,7 +75,7 @@
     </header>
 
     <body>
-        <div class="container-fluid" style="background-color: #52eb0c;">
+        <div class="container-fluid">
             <div class="container-fluid" style="width: 100%; height: 60px;">
 
             </div>
@@ -76,7 +83,7 @@
 
 
             </div>
-            <div class="card-add">
+            <div class="card-add" style="border-color:azure;">
                 <a data-bs-toggle="modal" data-bs-target="#AddItemModal"><i class="fas fa-plus-circle"></i></a>
             </div>
             <div class="container-fluid" style="width: 100%; height: 100px;">
@@ -107,6 +114,8 @@
                                 </button>
                         <ul class="dropdown-menu" style="width: 100%;">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#AddItemModal">Add Item</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#AddItemModal2">Edit Item</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#AddItemModal3">Delete Item</a></li>
                         </ul>
                     </div>
                     <div class="col-3 dropup" style="padding: 10px;">
@@ -131,11 +140,13 @@
                                 <li><a class="dropdown-item" href="#"><i class="far fa-address-card"></i>Guest</a></li>
                                 <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#LoginModal">log in</a></li>
                                 <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#AddItemModal">Add Item</a></li>
+                                <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#AddItemModal2">Edit Item</a></li>
+                                <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#AddItemModal3">Delete Item</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-10" style="padding: 40px; flex:1; ">
-                        <input class="form-control" type="search" placeholder="Search" aria-label="Search" style="width: 300%;">
+                        <input class="form-control" type="search" placeholder="Search" aria-label="Search" style="width: 300%;" id="searchBar2">
                     </div>
                 </div>
             </div>
@@ -192,6 +203,8 @@
                                     </button>
                         <ul class="dropdown-menu" style="width: 100%;">
                             <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#AddItemModal">Add Item</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#AddItemModal2">Edit Item</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#AddItemModal3">Delete Item</a></li>
                         </ul>
                     </div>
                     <div class="col-3 dropup" style="padding: 10px;">
@@ -411,18 +424,127 @@
                             <p><br></p>
                             <div class="col-12">
                                 <label class="form-label">Description:</label><br>
-                                <input type='text' name='fetchDescription' id='fetchDescription' />
+                                <input type='text' name='fetchDescription' id='fetchDescription' style="width:100%;"/>
                             </div>
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <div><button class="btn bg-primary" type='submit'>Save</button></div>
-                        <button class="btn-dark" ></button><a href="http://localhost:8080">Back</a></button>
+                        <div><button type='submit' class="btn bg-primary">Save</button></div>
                     </div>
             </div>
             </form>
         </div>
     </div>
+
+        <!-- Modal -->
+    <div class="modal fade" id="AddItemModal2" tabindex="-1" aria-labelledby="AddItemModal2Label" aria-hidden="true">
+            <div class="modal-dialog modal-fullscreen-lg-down">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="AddItemModal2Label">Edit Item</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <form method="POST" id='updateItem' action='http://localhost:8080/todolist'>
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="col-12">
+                                    <label class="form-label">ID:</label>
+                                    <input type='text' name='fetchId2' id='fetchId2' />
+                                </div>
+                                <div class="col-12">
+                                    <label class="form-label">Item:</label>
+                                    <input type='text' name='fetchItem2' id='fetchItem2' />
+                                </div>
+                                <div class="col-12">
+                                    <label class="form-label" placeholder="name">Assigned to:</label>
+                                    <input type='text' name='fetchAssignedTo2' id='fetchAssignedTo2' />
+                                </div>
+                                <div class="col-6">
+                                    <label class="form-label">Status:</label>
+                                    <select id="fetchStatu2" class="form-select">
+                                                <option selected>Choose...</option>
+                                                    <option>todo</option>
+                                                    <option>in-progress</option>
+                                                    <option>review</option>
+                                                    <option>done</option>
+                                                </select>
+                                    <p><br></p>
+                                </div>
+                                <div class="col-6">
+                                    <label class="form-label" placeholder="name">Category:</label>
+                                    <select id="fetchCategory2" class="form-select">
+                                                    <option selected>Choose...</option>
+                                                    <option>study</option>
+                                                    <option>work</option>
+                                                    <option>family</option>
+                                                    <option>null</option>
+                                                </select>
+                                </div>
+                                <p><br></p>
+                                <div class="col-12">
+                                    <label>Due Date:</label>
+                                    <input type="date" id="fetchDueDate2" name="fetchDueDate2">
+                                </div>
+                                <p><br></p>
+                                <div class="col-12">
+                                    <label>Start Date:</label>
+                                    <input type="date" id="fetchStartDate2" name="fetchStartDate2">
+                                </div>
+                                <p><br></p>
+                                <div class="col-12">
+                                    <label>Start Time:</label>
+                                    <input type="time" id="fetchStartTime2" name="fetchStartTime2">
+                                </div>
+                                <p><br></p>
+                                <div class="co-12">
+                                    <label>End Date:</label>
+                                    <input type="date" id="fetchEndDate2" name="fetchEndDate2">
+                                </div>
+                                <p><br></p>
+                                <div class="col-12">
+                                    <label>End Time:</label>
+                                    <input type="time" id="fetchEndTime2" name="fetchEndTime2">
+                                </div>
+                                <p><br></p>
+                                <div class="col-12">
+                                    <label class="form-label">Description:</label><br>
+                                    <input type='text' name='fetchDescription2' id='fetchDescription2' style="width:100%;"/>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <div><button type='submit' class="btn bg-success">Edit</button></div>
+                        </div>
+                </div>
+                </form>
+            </div>
+        </div>
+
+               <!-- Modal -->
+        <div class="modal fade" id="AddItemModal3" tabindex="-1" aria-labelledby="AddItemModal3Label" aria-hidden="true">
+                <div class="modal-dialog modal-fullscreen-lg-down">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="AddItemModal3Label">Delete Item</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <form method="POST" id='removeItem' action='http://localhost:8080/todolist'>
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <label class="form-label">ID:</label>
+                                        <input type='text' name='fetchId2' id='fetchId3' />
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <div><button type='submit' class="btn bg-danger">Delete</button></div>
+                            </div>
+                    </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    
 
 <script src='index.js'></script>
 <!-- bootstrap js -->
